# ConstructAndDestroy

./: .gitignore  .travis.yml  CMakeLists.txt  DefinitionOfDone.txt  PULL_REQUEST_TEMPLATE.md  README.md
src/: CMakeLists.txt  globals.cpp  main.cpp  matrix.cpp  mesh.h  simulation.cpp  simulation.h  world.cpp  world.h
src/behaviour/: behaviour.cpp  behaviour.h
src/behaviour/calculator/: basic_force_calculator.cpp  basic_force_calculator.h  force_calculator.h
src/behaviour/strategy/: arrive_strategy.h  behaviour_strategy.cpp  behaviour_strategy.h  explore_strategy.cpp  explore_strategy.h  flee_strategy.cpp  flee_strategy.h  obstacle_avoidance_strategy.h  seek_strategy.h  wander_strategy.h
src/entity/: base_entity.cpp  base_entity.h  entity_types.h  player.h  player_manager.cpp  player_manager.h  resources.cpp  resources.h
src/entity/goal/: composite_goal.h  goal.h
src/entity/goal/evaluator/: eat_evaluator.h  explore_evaluator.cpp  explore_evaluator.h  follow_path_evaluator.cpp  follow_path_evaluator.h  gather_resource_evaluator.cpp  gather_resource_evaluator.h  obstacle_avoid_evaluator.cpp  obstacle_avoid_evaluator.h  rest_evaluator.h  wander_evaluator.h  work_evaluator.cpp  work_evaluator.h
src/entity/goal/moving_entity_goal/: atomic_goal_type.h  follow_path_goal.cpp  follow_path_goal.h  go_eat_goal.cpp  go_eat_goal.h  rest_goal.cpp  rest_goal.h  strategy_goal_type.h  think_goal.cpp  think_goal.h  work_goal.cpp  work_goal.h
src/entity/moving/: lumberjack_entity.cpp  moving_entity.cpp  moving_entity.h  skeleton_entity.cpp
src/entity/static/: campfire_entity.cpp  campfire_entity.h  iron_mine_entity.h  resource_entity.cpp  resource_entity.h  resource_manager.cpp  resource_manager.h  resource_type.h  restaurant_entity.cpp  static_entity.cpp  static_entity.h  tree_entity.cpp  tree_entity.h  warehouse_entity.cpp
src/entity/weapon/: axe_weapon.h  bow_weapon.cpp  bow_weapon.h
src/fuzzy/: fuzzy_operators.cpp  fuzzy_rule.h  fuzzy_set_left_shoulder.h  fuzzy_set_singleton.h  fuzzy_set_triangle.cpp  fuzzy_set_triangle.h  fuzzy_term.h  fuzzy_variable.cpp
src/graph/: a_star_node.cpp  a_star_node.h  graph.cpp  graph.h  graph_manager.cpp  graph_manager.h  node.h
src/logic/: CMakeLists.txt  matrix.cpp  vector.cpp
src/logic/behaviour/: behaviour.cpp  move_order.cpp  move_order.h
src/logic/behaviour/calculator/: basic_force_calculator.cpp  basic_force_calculator.h
src/logic/behaviour/orderstrategies/: default_order_strategy.cpp  default_order_strategy.h  ground_order_strategy.cpp  ground_order_strategy.h  lumber_order_strategy.cpp  lumber_order_strategy.h  order_strategy.cpp  order_strategy.h
src/logic/behaviour/strategy/: arrive_strategy.cpp  arrive_strategy.h  behaviour_strategy.cpp  flee_strategy.cpp  flee_strategy.h  obstacle_avoidance_strategy.cpp  seek_strategy.cpp  seek_strategy.h  wander_strategy.cpp  wander_strategy.h
src/logic/entity/: base_entity.cpp  base_entity.h  entity_marks.h  player.cpp  player.h  player_manager.cpp  player_manager.h  resources.cpp  resources.h  upgrade.cpp  upgrade.h  upgrade_manager.cpp  upgrade_manager.h  upgrade_type.h
src/logic/entity/moving/: cavalier_entity.cpp  cavalier_entity.h  gold_miner_entity.cpp  gold_miner_entity.h  heavy_cavalier_entity.cpp  heavy_cavalier_entity.h  juggernaut_entity.cpp  juggernaut_entity.h  knight_entity.cpp  knight_entity.h  light_cavalier.cpp  light_cavalier.h  lumberjack_entity.cpp  lumberjack_entity.h  mercenary.cpp  mercenary_entity.h  miner_entity.cpp  miner_entity.h  moving_entity.cpp  moving_entity.h  moving_entity_factory.cpp  moving_entity_factory.h  moving_entity_manager.cpp  moving_entity_manager.h  moving_entity_types.h  skeleton_entity.cpp  skeleton_entity.h  spawnable_entity.cpp  spawnable_entity.h  spawnable_entity_manager.cpp  spawnable_entity_manager.h  stone_miner_entity.cpp  stone_miner_entity.h
src/logic/entity/state/: state.h  state_machine.h
src/logic/entity/static/: campfire_entity.cpp  (+20 more)
src/logic/fuzzy/: fuzzy_hedges.h  fuzzy_module.cpp  fuzzy_module.h  fuzzy_operators.h  fuzzy_set.h  fuzzy_set_left_shoulder.cpp  fuzzy_set_right_shoulder.cpp  fuzzy_set_right_shoulder.h  fuzzy_set_singleton.cpp  fuzzy_variable.cpp  fuzzy_variable.h  fz_set.h
src/logic/graph/: a_star_node.cpp  a_star_node.h  edge.cpp  edge.h  graph.cpp  graph.h  graph_manager.cpp  graph_manager.h  node.cpp  node.h
src/logic/neighbourhood/: neighbourhood_manager.cpp  neighbourhood_manager.h
src/logic/sorting/: quicksort_strategy.cpp
src/logic/tree/: bsp_node.h  bsp_tree.cpp
src/logic/wave/: wave.cpp  wave.h  wave_manager.cpp  wave_manager.h
src/logic/world/: world.cpp  world.h
src/neighbourhood/: neighbourhood_manager.cpp  neighbourhood_manager.h
src/renderer/: CMakeLists.txt  render_object.h  renderer.h
src/renderer/camera/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h
src/renderer/sdl/: sdl_render_object.cpp  sdl_render_object.h  sdl_renderer.cpp  sdl_renderer.h  sdl_ui_render_object.cpp  sdl_ui_render_object.h
src/renderer/textures/: texture_manager.cpp  texture_manager.h  texture_types.h
src/sorting/: quicksort_strategy.cpp  quicksort_strategy.h  sort_strategy.h
src/tree/: bsp_tree.cpp  bsp_tree.h
src/ui/: CMakeLists.txt  main.cpp  ui_component.cpp  ui_component.h
src/ui/component/: slot.h  ui_component.h
src/ui/event/: event_dispatcher.h  event_types.h  slot.h
src/ui/eventhandler/: event_handler.h  key_handler.cpp  key_handler.h  mouse_handler.cpp  mouse_handler.h  signal.h
src/ui/manager/: build_and_spawn_manager.cpp  build_and_spawn_manager.h
src/ui/panel/: information_panel.cpp  information_panel.h  world_panel.cpp  world_panel.h
src/ui/sdl/: sdl_ui_component.cpp  sdl_ui_component.h
src/ui/window/: simulation_window.cpp  simulation_window.h
test/: CMakeLists.txt  bsp_test.cpp  example_test.cpp  main.cpp
ui/: CMakeLists.txt  component.cpp  component.h  main.cpp
ui/panel/: panel.cpp  panel.h  world_panel.cpp  world_panel.h
ui/timer/: game_timer.cpp  game_timer.h
ui/view/: game_view.cpp  game_view.h
ui/window/: window.cpp  window.h
(+326 files in other folders)
