project(construct_and_destroy)

set(SOURCE_FILES
        matrix.cpp
        vector.cpp
        world/world.h
        entity/entity_types.h
        entity/moving/knight_entity.h
        entity/moving/moving_entity.h
        entity/moving/lumberjack_entity.h
        entity/moving/miner_entity.h
        entity/moving/skeleton_entity.h
        entity/weapon/axe_weapon.h
        entity/weapon/bow_weapon.h
        entity/static/resource_type.h
        entity/static/static_entity.h
        entity/static/resource_entity.h
        entity/static/resource_manager.h
        entity/static/tree_entity.h
        entity/static/iron_mine_entity.h
        entity/static/building/warehouse_entity.h
        entity/static/building/building_factory.h
        entity/static/building/building_manager.h
        entity/static/building/castle_entity.h
        entity/static/building/building_entity.h
        entity/static/building/building_type.h
        entity/static/building/building_state/choosing_building_position.h
        entity/static/building/building_state/placing_building.h
        entity/static/building/building_state/abort_placing_building.h
        state/state.h
        state/state_machine.h
        entity/goal/evaluator/obstacle_avoid_evaluator.h
        entity/goal/evaluator/wander_evaluator.h
        entity/goal/moving_entity_goal/initiator.h
        entity/goal/moving_entity_goal/atomic_goal_type.h
        entity/goal/moving_entity_goal/strategy_goal_type.h
        entity/goal/moving_entity_goal/job_type.h
        entity/goal/moving_entity_goal/level_type.h
        entity/goal/moving_entity_goal/atomic/wander_goal.h
        entity/goal/moving_entity_goal/think_goal.h
        entity/goal/moving_entity_goal/atomic/gather_resource_goal.h
        entity/goal/moving_entity_goal/atomic/drop_resources_goal.h
        entity/goal/moving_entity_goal/atomic/obstacle_avoidance_goal.h
        entity/goal/moving_entity_goal/follow_path_goal.h
        entity/goal/moving_entity_goal/atomic/plan_path_goal.h
        entity/goal/moving_entity_goal/atomic/traverse_edge_goal.h
        entity/goal/moving_entity_goal/work_goal.h
        entity/goal/evaluator/gather_resource_evaluator.h
        entity/goal/evaluator/work_evaluator.h
        entity/goal/evaluator/follow_path_evaluator.h
        behaviour/calculator/basic_force_calculator.h
        behaviour/strategy/arrive_strategy.h
        behaviour/strategy/seek_strategy.h
        behaviour/strategy/flee_strategy.h
        behaviour/strategy/obstacle_avoidance_strategy.h
        behaviour/strategy/wander_strategy.h
        behaviour/orderstrategies/default_order_strategy.h
        behaviour/move_order.h
        behaviour/orderstrategies/ground_order_strategy.h
        behaviour/orderstrategies/lumber_order_strategy.h
        behaviour/orderstrategies/order_strategy.h
        graph/graph_manager.h
        graph/node.h
        graph/a_star_node.h
        graph/edge.h
        graph/graph.h
        tree/bsp_tree.h
        tree/bsp_node.h
        sorting/sort_strategy.h
        sorting/quicksort_strategy.h
        fuzzy/fuzzy_hedges.h
        fuzzy/fz_set.h
        fuzzy/fuzzy_rule.h
        fuzzy/fuzzy_set.h
        fuzzy/fuzzy_term.h
        fuzzy/fuzzy_module.h
        fuzzy/fuzzy_operators.h
        fuzzy/fuzzy_set_triangle.h
        fuzzy/fuzzy_variable.h
        fuzzy/fuzzy_set_singleton.h
        fuzzy/fuzzy_set_left_shoulder.h
        fuzzy/fuzzy_set_right_shoulder.h
        entity/player.h
        entity/player_manager.h
        world/world.cpp
        tree/bsp_tree.cpp
        entity/base_entity.cpp
        entity/moving/moving_entity.cpp
        entity/moving/lumberjack_entity.cpp
        entity/moving/miner_entity.cpp
        entity/moving/skeleton_entity.cpp
        entity/weapon/axe_weapon.cpp
        entity/weapon/bow_weapon.cpp
        entity/static/static_entity.cpp
        entity/static/resource_entity.cpp
        entity/static/resource_manager.cpp
        entity/static/tree_entity.cpp
        entity/static/iron_mine_entity.cpp
        entity/static/building/warehouse_entity.cpp
        entity/static/building/building_factory.cpp
        entity/static/building/building_manager.cpp
        entity/static/building/castle_entity.cpp
        entity/static/building/building_entity.cpp
        entity/static/building/building_state/choosing_building_position.cpp
        entity/static/building/building_state/placing_building.cpp
        entity/static/building/building_state/abort_placing_building.cpp
        entity/goal/evaluator/obstacle_avoid_evaluator.cpp
        entity/goal/evaluator/wander_evaluator.cpp
        entity/goal/moving_entity_goal/atomic/wander_goal.cpp
        entity/goal/moving_entity_goal/think_goal.cpp
        entity/goal/moving_entity_goal/atomic/obstacle_avoidance_goal.cpp
        entity/goal/moving_entity_goal/follow_path_goal.cpp
        entity/goal/moving_entity_goal/atomic/plan_path_goal.cpp
        entity/goal/moving_entity_goal/atomic/traverse_edge_goal.cpp
        entity/goal/moving_entity_goal/work_goal.cpp
        entity/goal/moving_entity_goal/atomic/gather_resource_goal.cpp
        entity/goal/moving_entity_goal/atomic/drop_resources_goal.cpp
        entity/goal/evaluator/gather_resource_evaluator.cpp
        entity/goal/evaluator/work_evaluator.cpp
        entity/goal/evaluator/follow_path_evaluator.cpp
        behaviour/behaviour.cpp
        behaviour/calculator/basic_force_calculator.cpp
        behaviour/strategy/behaviour_strategy.cpp
        behaviour/strategy/arrive_strategy.cpp
        behaviour/strategy/seek_strategy.cpp
        behaviour/strategy/flee_strategy.cpp
        behaviour/strategy/obstacle_avoidance_strategy.cpp
        behaviour/strategy/wander_strategy.cpp
        behaviour/orderstrategies/default_order_strategy.cpp
        behaviour/move_order.cpp
        behaviour/orderstrategies/ground_order_strategy.cpp
        behaviour/orderstrategies/lumber_order_strategy.cpp
        behaviour/orderstrategies/order_strategy.cpp
        graph/graph_manager.cpp
        graph/node.cpp
        graph/a_star_node.cpp
        graph/edge.cpp
        graph/graph.cpp
        neighbourhood/neighbourhood_manager.cpp
        sorting/quicksort_strategy.cpp
        fuzzy/fuzzy_module.cpp
        fuzzy/fuzzy_operators.cpp
        fuzzy/fuzzy_set_triangle.cpp
        fuzzy/fuzzy_variable.cpp
        fuzzy/fuzzy_set_singleton.cpp
        fuzzy/fuzzy_set_left_shoulder.cpp
        fuzzy/fuzzy_set_right_shoulder.cpp
        entity/player.cpp
        entity/resources.cpp
        entity/player_manager.cpp
        entity/moving/knight_entity.cpp
        entity/moving/moving_entity_factory.h
        entity/moving/moving_entity_types.h
        entity/moving/moving_entity_factory.cpp
        entity/moving/moving_entity_manager.h
        entity/moving/moving_entity_manager.cpp
        entity/moving/knight_entity.cpp
        entity/goal/moving_entity_goal/combat_goal.h
        entity/goal/moving_entity_goal/combat_goal.cpp
        entity/goal/evaluator/combat_evaluator.h
        entity/goal/evaluator/combat_evaluator.cpp
        entity/goal/moving_entity_goal/hunt_target_goal.h
        entity/goal/moving_entity_goal/hunt_target_goal.cpp
        wave/wave.h
        wave/wave.cpp
        entity/static/gold_mine_entity.h
        entity/static/gold_mine_entity.cpp
        entity/goal/moving_entity_goal/atomic/fight_goal.cpp
        entity/goal/moving_entity_goal/atomic/fight_goal.h
        entity/goal/moving_entity_goal/hunt_target_goal.h
        entity/moving/moving_entity_types.h
        entity/static/building/spawnable_entity.cpp
        entity/static/building/spawnable_entity.h
        entity/static/stone_mine_entity.h
        entity/static/stone_mine_entity.cpp)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_SOURCE_DIR}/include)

# Add the rendering project as a dependency
include_directories(../renderer)

add_library(cd_logic STATIC
        ${SOURCE_FILES})

target_link_libraries(cd_logic cd_renderer)